VScodeでコミット

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="div_id1">Hello World!!</div>
     <div id="div_id2">test!!</div>
-    <div id="div_id3">test0325! hotmailAccount new Key made by surfacePC commandline</div>
+    <div id="div_id3">test0325! commandline openSSH</div>
     <button id="button_id1">button</button>
     <img src="color.jpg" />
 
